--- a/app/src/main/res/layout/ingredient_button_layout.xml
+++ b/app/src/main/res/layout/ingredient_button_layout.xml
@@ -1,7 +1,7 @@
 <Button android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginRight="5dp"
-    android:layout_marginLeft="5dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginRight="8dp"
     android:background="#44FFFFFF"
     android:paddingLeft="3dp"
     android:paddingRight="3dp"
