--- a/app/src/main/res/layout/ingredient_button_layout.xml
+++ b/app/src/main/res/layout/ingredient_button_layout.xml
@@ -6,4 +6,5 @@
     android:paddingLeft="3dp"
     android:paddingRight="3dp"
     android:textColor="#0D4D4D"
+    android:onClick="removeFromChosen"
     xmlns:android="http://schemas.android.com/apk/res/android" />
